# service/model/request/get-photos.go
@@ -2,14 +2,14 @@ package request
 
 type GetPhotosRequest struct {
 	QueryParameters struct {
-		UserId   string
-		LastDate string
-		LastId   string
+		UserId    string `key:"userId"`
+		StartDate string `key:"startDate"`
+		StartId   string `key:"startId"`
 	}
 }
 
 func (request *GetPhotosRequest) IsValid() bool {
 	return isValidUUID(request.QueryParameters.UserId) &&
-		isValidDateTime(request.QueryParameters.LastDate) &&
-		(request.QueryParameters.LastId == "" || isValidUUID(request.QueryParameters.LastId))
+		isValidDateTime(request.QueryParameters.StartDate) &&
+		(request.QueryParameters.StartId == "" || isValidUUID(request.QueryParameters.StartId))
 }
